fix reaction icon to be aligned with text above

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -50,6 +50,10 @@ limitations under the License.
   & .mx_EventTile_readAvatars {
     top: 7px;
   }
+
+  & .mx_ReactionsRow {
+    margin-right: 27px;
+  }
 }
 
 .mx_EventTile.mx_EventTile_info {
